--- a/src/Style/ProductDetails.css
+++ b/src/Style/ProductDetails.css
@@ -207,9 +207,9 @@ body {
   }
 
   .first-h31 {
-    margin-top: 20px;
+    margin-top: 38px;
     font-size: 15px;
-  }
+}
   .first-h31 > p {
     width: 97%;
     font-size: 13px;
@@ -245,11 +245,11 @@ body {
   }
 
   .first-second-section1 > .imga-aboutus11 > img {
-    object-position: top;
+    object-position: center;
     width: 100%;
-    height: 100%;
+    height: 123%;
     object-fit: contain;
-  }
+}
   .first-second-section1 > .imga-aboutus11 {
     width: 100%;
     height: 265px;
