--- a/src/Style/Service.css
+++ b/src/Style/Service.css
@@ -104,7 +104,6 @@
   .service-container{
     width: 99%;
     margin: auto;
-    padding: 20px;
   }
   .main-content-first-div1>:nth-child(1){
     margin-top: 10px;
